--- a/templates/sqldatabase.html
+++ b/templates/sqldatabase.html
@@ -30,14 +30,14 @@
         {% for eresult in eresults %}
 
         <form action = "edit" method = "POST">
-         <p>Drink Name: <input class="form-control" type = "text" name = "first_name" style='width: 100%;' value='{{eresult["first_name"]}}'/></p>
-         <p>Main Spirit: <input class="form-control" type = "text" name = "last_name" style='width: 100%;' value='{{eresult["last_name"]}}' /></p>
-         <p>Ingredient 1: <input class="form-control" type = "text" name = "address" style='width: 100%;' value='{{eresult["address"]}}' /></p>
-         <p>Ingredient 2: <input class="form-control" type = "text" name = "city" style='width: 100%;' value='{{eresult["city"]}}' /></p>
-         <p>Ingredient 3: <input class="form-control" type ="text" name = "state" style='width: 100%;' value='{{eresult["state"]}}' /></p>
-         <p>Garnish: <input class="form-control" type ="text" name = "zip" style='width: 100%;' value='{{eresult["zip"]}}' /></p>
-         <input type ="hidden" name = "old_first_name" value='{{eresult["first_name"]}}' />
-         <input type ="hidden" name = "old_last_name" value='{{eresult["last_name"]}}' />
+         <p>Drink Name: <input class="form-control" type = "text" name = "drink_name" style='width: 100%;' value='{{eresult["drink_name"]}}'/></p>
+         <p>Main Spirit: <input class="form-control" type = "text" name = "spirit" style='width: 100%;' value='{{eresult["spirit"]}}' /></p>
+         <p>Ingredient 1: <input class="form-control" type = "text" name = "ingredient_1" style='width: 100%;' value='{{eresult["ingredient_1"]}}' /></p>
+         <p>Ingredient 2: <input class="form-control" type = "text" name = "ingredient_2" style='width: 100%;' value='{{eresult["ingredient_2"]}}' /></p>
+         <p>Ingredient 3: <input class="form-control" type ="text" name = "ingredient_3" style='width: 100%;' value='{{eresult["ingredient_3"]}}' /></p>
+         <p>Garnish: <input class="form-control" type ="text" name = "garnish" style='width: 100%;' value='{{eresult["ganrish"]}}' /></p>
+         <!-- <input type ="hidden" name = "old_first_name" value='{{eresult["first_name"]}}' />
+         <input type ="hidden" name = "old_last_name" value='{{eresult["last_name"]}}' /> -->
 
          {% endfor %}
 
@@ -54,12 +54,12 @@
         </div>
         
         <form action = "insert" method = "POST">
-         <p>Drink Name: <input class="form-control" type = "text" name = "first_name" style='width: 100%;' /></p>
-         <p>Main Spirit: <input class="form-control" type = "text" name = "last_name" style='width: 100%;' /></p>
-         <p>Ingredient 1: <input class="form-control" type = "text" name = "address" style='width: 100%;' /></p>
-         <p>Ingredient 2: <input class="form-control" type = "text" name = "city" style='width: 100%;' /></p>
-         <p>Ingredient 3: <input class="form-control" type ="text" name = "state" style='width: 100%;' /></p>
-         <p>Garnish: <input class="form-control" type ="text" name = "zip" style='width: 100%;' /></p>
+         <p>Drink Name: <input class="form-control" type = "text" name = "drink_name" style='width: 100%;' /></p>
+         <p>Main Spirit: <input class="form-control" type = "text" name = "spirit" style='width: 100%;' /></p>
+         <p>Ingredient 1: <input class="form-control" type = "text" name = "ingredient_1" style='width: 100%;' /></p>
+         <p>Ingredient 2: <input class="form-control" type = "text" name = "ingredient_2" style='width: 100%;' /></p>
+         <p>Ingredient 3: <input class="form-control" type ="text" name = "ingredient_3" style='width: 100%;' /></p>
+         <p>Garnish: <input class="form-control" type ="text" name = "garnish" style='width: 100%;' /></p>
          <br>
 
          <p><input class="btn-primary" type = "submit" value = "Insert Data" /></p>
@@ -101,14 +101,14 @@
 
          {% for result in results %}
             <tr>
-               <td>{{result["first_name"]}}</td>
-               <td>{{result["last_name"]}}</td>
-               <td>{{result["address"]}}</td>
-               <td>{{result['city']}}</td>
-               <td>{{result['state']}}</td>
-               <td>{{result['zip']}}</td>
-               <td align="center"><a href = "{{ url_for('sql_editlink', efname=result['first_name'], elname=result['last_name']) }}"><i class="fas fa-edit"></a></td>
-               <td align="center"><a href = "{{ url_for('sql_datadelete', fname=result['first_name'], lname=result['last_name']) }}"><i class="fas fa-trash-alt"></a></td>
+               <td>{{result["drink_name"]}}</td>
+               <td>{{result["spirit"]}}</td>
+               <td>{{result["ingredient_1"]}}</td>
+               <td>{{result['ingredient_2']}}</td>
+               <td>{{result['ingredient_3']}}</td>
+               <td>{{result['ganrish']}}</td>
+               <td align="center"><a href = "{{ url_for('sql_editlink', edname=result['drink_name']) }}"><i class="fas fa-edit"></a></td>
+               <td align="center"><a href = "{{ url_for('sql_datadelete', dname=result['drink_name']) }}"><i class="fas fa-trash-alt"></a></td>
             </tr>
          {% endfor %}
       </table>
